# integration-calculator

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  cli-entry.cpp  gui-entry.cpp  input.csv  run-gui
.github/workflows/: release.yml
assets/: icon.icns
cli/content/: integration-strings.cpp  integration-strings.h  menu-strings.cpp  menu-strings.h  messages.cpp  messages.h
cli/input/: input-provider.cpp  input-provider.h
cli/logic/: execution.cpp  execution.h  navigation.cpp  navigation.h
cli/utils/: console.cpp  console.h
engine/csv/: processor.cpp  processor.h
engine/expression/: exception.h  parser.cpp  parser.h  tree.cpp  tree.h
engine/integration/: integrator.cpp  integrator.h  stats.cpp  stats.h
engine/integration/method/: left-riemann.cpp  methods.h  midpoint-riemann.cpp  riemann.h  right-riemann.cpp  simpsons.cpp  trapezoidal.cpp
gui/auth/: history.cpp  history.h  user-store.cpp  user-store.h
gui/content/: window-strings.cpp  window-strings.h
gui/core/: application.cpp  application.h
gui/dialog/: auth.cpp  auth.h  help.cpp  help.h  history.cpp  history.h  login.cpp  login.h  register.cpp  register.h
gui/main/: menu-bar.cpp  menu-bar.h  window-ui.cpp  window.cpp  window.h
gui/plotting/: axes.cpp  bars.cpp  bounds.cpp  curve.cpp  helpers.h  view.cpp  view.h
gui/ui/: widgets.cpp  widgets.h
tests/: csv.cpp  integration.cpp  parser.cpp  stats.cpp  utils.h
